--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -931,6 +931,7 @@ input.valid:not([type]), input.valid:not([type]):focus, input[type=text].valid:n
 }
 .error {
     font-size: 10px;
+    float: right;
 }
 input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
     margin: 0 0 5px 0 !important;
