--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -223,7 +223,7 @@ p.label {
 }
 .footer-section ul li{
     /*min-width: 40px;*/
-    margin-left:30px;
+    margin-left:20px;
     display:inline-block;
     height: 0px;
 }
@@ -306,77 +306,77 @@ label{
 
 
 /* iPad Pro */
-@media (width: 1024px) and (height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 0) {
+@media (min-width: 1024px) and (max-width: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 0) {
   	/*Pillars*/
   	.panel{
-	    -webkit-width: 50% !important;
-	    -webkit-height: 683px !important;
-	    -webkit-float: left !important;
+	    width: 50% !important;
+	    height: 683px !important;
+	    float: left !important;
   	}
   	.panel:hover{
-  		-webkit-width: 50% !important;
+  		width: 50% !important;
   	}
 	/*alignment for contact form*/
 	.row .col.i12{	
-		-webkit-width: 100% !important;
-	    -webkit-margin-left: auto !important;
-	    -webkit-left: auto !important;
-	    -webkit-right: auto !important;
+		width: 100% !important;
+	    margin-left: auto !important;
+	    left: auto !important;
+	    right: auto !important;
 	}
 	/*Info resize*/
 	.form_holder {
-		-webkit-margin: 10% auto auto !important;
+		margin: 10% auto auto !important;
 	}
 	.i{
-		-webkit-font-size: 20px !important;
+		font-size: 20px !important;
 	}
 	/*Form resize*/
 	.input-field.col label{
-		-webkit-font-size: 24px !important;
+		font-size: 24px !important;
 	}
 	input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
-		-webkit-font-size: 24px !important;
+		font-size: 24px !important;
 	}
 	.node .title{
-		-webkit-display: none !important;
+		display: none !important;
 	}#lead {
-	    -webkit-background-position: 0px 0px !important;
-	    -webkit-background-attachment: scroll !important;
-	    -webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+	    background-position: 0px 0px !important;
+	    background-attachment: scroll !important;
+	    width: 100% !important;
+	    height: 435px !important;
 	}
 	#backend {
-		-webkit-background-attachment: scroll !important;
-		-webkit-background-position: 0px 0px !important;
-		-webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
 	}
 	#frontend {
-		-webkit-background-attachment: scroll !important;
-		-webkit-background-position: 0px 0px !important;
-		-webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
 	}
 	#social {
-		-webkit-background-attachment: scroll !important;
-		-webkit-background-position: 0px 0px !important;
-		-webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
 	}
 	#webdev {
-		-webkit-background-attachment: scroll !important;
-		-webkit-background-position: 0px 0px !important;
-		-webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
 	}
 	#marketing {
-		-webkit-background-attachment: scroll !important;
-		-webkit-background-position: 0px 0px !important;
-		-webkit-width: 100% !important;
-	    -webkit-height: 435px !important;
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
 	}
 	.services-content{
-		-webkit-width: 100% !important;
+		width: 100% !important;
 	}
 
 }
@@ -538,7 +538,7 @@ label{
 	}
 }	
 /* Landscape */
-@media (height: 1024px) and (width: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 0) {
+@media (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 0) {
 	/*Info resize*/
 	.form_holder {
 		margin: 8% auto auto !important;
@@ -594,7 +594,7 @@ label{
 		background-position: -800px !important;
 	}
 }
-@media (height: 1024px) and (width: 768px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (height: 1024px) and (width: 768px) and (-webkit-min-device-pixel-ratio: 0) {
 	/*Info resize*/
 	#display_pillar{
 		height:100%;
@@ -604,7 +604,7 @@ label{
 		height:25%;
 	}
 }
-@media (height: 768px) and (width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (height: 768px) and (width: 1024px) and (-webkit-min-device-pixel-ratio: 0) {
 	/*Info resize*/
 	#display_pillar{
 		height:100% !important;
@@ -763,7 +763,7 @@ label{
 		width:350px !important;
 	}
 }
-@media screen and (max-width: 767px) and (orientation: portrait) { 
+@media screen and (max-width: 993px) and (orientation: portrait) { 
 	/* Smartphones */
 	.picker--opened.picker{
 		position: relative;
@@ -948,42 +948,42 @@ label{
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#backend {
 		background-size: cover;
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#frontend {
 		background-size: cover;
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#social {
 		background-size: cover;
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#webdev {
 		background-size: cover;
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#marketing {
 		background-size: cover;
 		background-position: 0px 0px;
 		background-attachment: scroll;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 	}
 	#display_pillar{
 		height:100%;
@@ -1005,15 +1005,15 @@ label{
 		width:600px !important;
 	}
 }
-/*@media screen and (max-width: 1040px) and (orientation:landscape) {
+@media screen and (max-height: 640px) and (orientation:landscape) {
 	#lead {
-		background-position: -500px !important;
+		background-position: -200px !important;
 	}
 	#backend {
 		background-position: center;
 	}
 	#frontend {
-		background-position: -500px !important;
+		background-position: -300px !important;
 	}
 	#social {
 		background-position: center;
@@ -1022,7 +1022,7 @@ label{
 		background-position: -300px;
 	}
 	#marketing {
-		background-position: -500px !important;
+		background-position: -200px !important;
 	}
 	h4{
 	    font-size: 30px !important;
@@ -1033,4 +1033,4 @@ label{
 	svg{
 		width:600px !important;
 	}
-}*/
+}
