--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -222,16 +222,16 @@ p.label {
     /* padding: 50px 0px 20% 0px; */
 }
 .footer-section ul li{
-    /*min-width: 40px;*/
+    min-width: 40px;
     margin-left:30px;
     display:inline-block;
     height: 0px;
 }
 .footer-section a{
-    line-height: 40px;
+    /* line-height: 40px; */
 }
 .footer-section ul{
-    margin: 0px;
+    /* margin: 0px; */
 }
 .footer-section img.social-icons{
     margin-right:10px;
@@ -241,7 +241,7 @@ p.label {
      bottom: 0%;
      height: 50px;
      width: 100%;
-     padding: 5px;
+     /* padding: 5px; */
      color: #fff;
      background-color: rgba(0, 0, 0, 1);
      z-index:  10000;
@@ -836,7 +836,7 @@ label{
 		position: relative;
 	}
 	.footer-section ul {
-		margin: 10px !important;
+		/* margin: 10px !important; */
 	}
 	.footer-section ul li {
 		margin-left: 0px !important;
@@ -856,8 +856,8 @@ label{
 		/* line-height: 24px; */
 	}
 	.footer-section .right ul li {
-		top: -12px;
-		position: relative;
+		/* top: -12px; */
+		/* position: relative; */
 	}
 	.form_holder .row {
 		margin-bottom: 0px !important;
