--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -59,7 +59,7 @@ html {
 
 *[data-count='one']:hover{
   background: rgba(99, 98, 98, 0.1) url("../images/services/bgmarketing.png")  center/cover no-repeat;
-  /*background-position:-600px; */
+  background-position:-600px;
 }
 
 *[data-count='two'] {
@@ -85,8 +85,8 @@ html {
 }
 
 *[data-count='four']:hover {
-  background: rgba(99, 98, 98, 0.1) url("../images/services/frontend.png")  center/cover no-repeat;
-  /*background-position: -200px;*/
+  background: rgba(99, 98, 98, 0.1) url("../images/services/frontend.png") center/cover no-repeat;
+  background-position: -600px;
 }
 /* --- TEXT --- */
 
