--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -120,7 +120,7 @@ body.home{
 	background: url(../images/services/bgsocial.png) no-repeat;
 	background-size: cover;
 	background-position: center;
-	/*background-attachment: fixed;*/
+	background-attachment: fixed;
 }
 #webdev {
 	background: url(../images/services/webdev.png) no-repeat;
@@ -132,7 +132,7 @@ body.home{
 	background: url(../images/services/bgmarketing.png) no-repeat;
 	background-size: cover;
 	background-position: -600px;
-	/*background-attachment: fixed;*/
+	background-attachment: fixed;
 }
 #backcon {
 	background: url(../images/services/bgcontact.jpg) no-repeat;
@@ -630,6 +630,41 @@ label{
 		width:100%;
 		height:25%;
 	}
+	*[data-count='one']:hover{
+		background-position: -400px !important;
+	}
+	*[data-count='two']:hover {
+		background-position: -300px !important;
+	}
+	*[data-count='three']:hover {
+		background-position: -150px !important;
+	}
+	*[data-count='four']:hover {
+	 	background-position: -350px !important;
+	}
+	#lead {
+		background-attachment: scroll !important;
+		background-position: -350px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: -850px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: -800px !important;
+	}
 }
 @media (height: 768px) and (width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5) {
 	/*Info resize*/
@@ -653,6 +688,41 @@ label{
 		height: 40% !important;
 		position: absolute;
 	}	
+	*[data-count='one']:hover{
+		background-position: -100px !important;
+	}
+	*[data-count='two']:hover {
+		background-position: -10px !important;
+	}
+	*[data-count='three']:hover {
+		background-position: -0px !important;
+	}
+	*[data-count='four']:hover {
+	 	background-position: -0px !important;
+	}
+	#lead {
+		background-attachment: scroll !important;
+		background-position: -350px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: -850px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: -800px !important;
+	}
 }
 @media (min-width: 994px){
 	/* Desktop */
@@ -713,7 +783,7 @@ label{
 		bottom: 0;
 		left: 0;
 		vertical-align: middle;
-		height: 10%;
+		height: 10% !important;
 		position: absolute;
 	}
 	.text p{
@@ -785,12 +855,9 @@ label{
 	.loading .main-section .stage{
 		height: 75%;
 	}
-	#display_pillar{
-		height:100%;
-	}
 	#display_pillar .panel{
 		width:50%;
-		height:50%;
+		height: 100%;
 	}
 	.node .title{
 		display: none !important;
@@ -847,7 +914,7 @@ label{
 @media screen and (max-width: 767px) and (orientation: portrait) { 
 	/* Smartphones */
 	.pillar-title{
-		height: 50px;
+		/* height: 50px; */
 	}
 	.picker--opened.picker{
 		position: relative;
@@ -1004,18 +1071,16 @@ label{
 		bottom: 0;
 		left: 0;
 		vertical-align: middle;
-		height: 80%;
+		height: 90% !important;
 		position: absolute;
 	}	
 	#display_pillar{
 		height: 100%;
 		width: 100%;
 	}
-
 	.loading .main-section .stage{
 		height: 50%;
 	}
-
 	h4{
 		font-size: 30px !important;
 	}
@@ -1118,7 +1183,7 @@ label{
 		background-position: -100px !important;
 	}
 	#marketing {
-		background-position: -300px !important;
+		/* background-position: -300px !important; */
 	}
 	h4{
 	    font-size: 30px !important;
@@ -1128,6 +1193,11 @@ label{
 	}
 	svg{
 		width:600px !important;
+	}
+}
+@media only screen and (max-width: 600px) {
+	.show-on-small {
+		display: block !important
 	}
 }
 
