--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -81,7 +81,7 @@
 	    float: left !important;
 	}
 	.pillar-title{
-		height: 50px;
+		/* height: 50px; */
 	}
 	#display_pillar{
 		height:100% !important;
@@ -126,7 +126,7 @@
 		background-position: -800px !important;
 	}
 	.pillar-title{
-		height: 50px;
+		/* height: 50px; */
 	}
 	.service-banner {
 		min-height: 100%;
@@ -157,7 +157,7 @@
 		margin: 0 auto;
 		/* position:relative; */
 		/* top: 20%; */
-		margin-top: 50px;
+		/* margin-top: 50px; */
 	}
 	.form_holder{
 		position: relative;
@@ -175,7 +175,7 @@
 		bottom: 0;
 		left: 0;
 		vertical-align: middle;
-		height: 40% !important;
+		height: 70% !important;
 		position: absolute;
 	}
 	#display_pillar{
